--- a/Final Stylesheet.css
+++ b/Final Stylesheet.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 body {
-	background:url("../Final part4/Assets/Background3.jpg");
+	background:url("assets/Background3.jpg");
 	background-size: 100% 100%;
 }
 .Header {
